# COMP4300-Game-Programming

./: CMakeLists.txt  Game.cpp  Game.h  config.json  main.cpp
game-engine/: Common.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h
game-engine/components/: CCollision.h  CInput.h  CLifespan.h  CScore.h  CShape.h  CTransform.h
game-engine/util/: ConfigLoader.cpp  ConfigLoader.h  Vec2.cpp  Vec2.h
